catkin_ws/logs/rgbd_slam/build.make.079.log.stderr
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/main.cpp:12:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/TransformTest.cpp: In function ‘void testTransform()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/TransformTest.cpp:104:2: error: ‘map1’ was not declared in this scope
  map1 = dep1; // visual
  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/TransformTest.cpp:105:2: error: ‘map2’ was not declared in this scope
  map2 = dep2; 
  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/TransformTest.cpp:56:10: warning: unused variable ‘file_name’ [-Wunused-variable]
     char file_name [100];
          ^
make[2]: *** [CMakeFiles/rgbd_slam.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/rgbd_slam.dir/all] Error 2
make: *** [all] Error 2
